(doc): add concurrency to learn plan